# API_control

./: .gitignore  CHANGELOG.md  README.md  REFACTOR_PLAN.md  _gen.py  api_service.py  app_flet.py  build.py  build_minimal.py  build_whitelist.py  fix_mcp.py  git_bash_detector.py  glm_config_mapper.py  gui.py  main.py  pyproject.toml  settings_manager.py  setup.py  syntax_check.py  test_mcp_sync.py
.github/workflows/: build.yml
ai_cli_manager/: __init__.py
backup/: database_backup.py
core/: anthropic_service.py  api_detector.py  api_validator.py  base_service.py  chat_worker.py  claude_service.py  claude_tools.py  cli_logger.py  code_analyzer.py  command_executor.py  compression_debugger.py  compression_visualizer.py  conversation.py  deepseek_service.py  dpi_manager.py  encoding_handler.py  fast_scan.c  fast_scan.pyx  file_handler.py  file_manager.py  gemini_service.py  gist_sync.py  glm_service.py  history_compressor.py  history_parser.py  key_manager.py  key_model_manager.py  lazy_loader.py  markdown_cache.py  mcp_checker.py  message_handler.py  permission_manager.py  prompt_manager.py  refresh_manager.py  service_factory.py  session_export.py  settings.py  state_machine.py  system_interface.py  system_prompt.py  (+4 more)
liangmu_history/: Cargo.toml  pyproject.toml
liangmu_history/src/: cache.rs  lib.rs  provider.rs  types.rs
liangmu_history/src/providers/: claude.rs  codex.rs  mod.rs
mcp_data/: mcp_registry.db  tool_usage.db
mcp_servers/: pathfixer_server.py
openspec/: project.md
openspec/changes/migrate-to-tauri/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-tauri/specs/api-keys/: spec.md
openspec/changes/migrate-to-tauri/specs/history/: spec.md
openspec/changes/migrate-to-tauri/specs/mcp/: spec.md
openspec/changes/migrate-to-tauri/specs/prompts/: spec.md
openspec/changes/migrate-to-tauri/specs/system/: spec.md
services/: base_service.py  claude_code_service.py
services/api_services/: __init__.py  claude_code_service.py  glm_api_service.py  openai_service.py  service.py  service_factory.py
tests/: test_altc.py  test_altc_simple.py  test_hotkey_background.py  test_path_picker.py
ui/: __init__.py  clipboard_paste.py  common.py  database.py  hotkey.py  lang.py  state.py  theme_manager.py  tray.py
ui/pages/: api_keys.py  history.py  mcp.py  prompts.py  skills.py
ui/tools/: __init__.py  copypath_tool.py  path_picker.py  screenshot_tool.py
