[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli-manager"
version = "1.0.0"
description = "A powerful management tool for AI CLI tools (Claude Code, Codex, Gemini, Aider)"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "LiangMu-Studio"}
]
keywords = ["ai", "cli", "claude", "codex", "gemini", "aider", "mcp", "prompt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "mss>=9.0.0",
    "pynput>=1.7.0",
    "keyboard>=0.13.0",
    "pystray>=0.19.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
]

[project.urls]
Homepage = "https://github.com/LiangMu-Studio/AI_CLI_Manager"
Repository = "https://github.com/LiangMu-Studio/AI_CLI_Manager"
Issues = "https://github.com/LiangMu-Studio/AI_CLI_Manager/issues"

[project.scripts]
ai-cli-manager = "ai_cli_manager:main"

[project.gui-scripts]
ai-cli-manager-gui = "ai_cli_manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_cli_manager*", "ui*", "core*", "services*"]

[tool.setuptools.package-data]
"*" = ["*.db", "*.ico", "*.json"]
