[package]
name = "liangmu_history"
version = "0.2.0"
edition = "2021"
description = "High-performance history parser for AI CLI tools"

[lib]
name = "liangmu_history"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
walkdir = "2"
chrono = "0.4"
parking_lot = "0.12"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
lru = "0.12"
lazy_static = "1.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
